(todo): list view overflow-x hidden to prevent scrolling on x-axis

--- a/src/app/main/apps/todo/views/list/list-view.scss
+++ b/src/app/main/apps/todo/views/list/list-view.scss
@@ -21,102 +21,106 @@
             }
         }
 
-        .todo-item {
-            position: relative;
-            padding: 16px;
-            border-bottom: 1px solid rgba(0, 0, 0, 0.08);
-            text-transform: none;
-            cursor: pointer;
+        .todo-items {
+            overflow-x: hidden;
+            
+            .todo-item {
+                position: relative;
+                padding: 16px;
+                border-bottom: 1px solid rgba(0, 0, 0, 0.08);
+                text-transform: none;
+                cursor: pointer;
 
-            &.ui-sortable-helper {
-                opacity: 1 !important;
-                background: #FFFFFF;
-                box-shadow: $whiteframe-shadow-14dp;
-                border: none;
+                &.ui-sortable-helper {
+                    opacity: 1 !important;
+                    background: #FFFFFF;
+                    box-shadow: $whiteframe-shadow-14dp;
+                    border: none;
 
-                .md-ripple-container {
-                    display: none;
-                }
-            }
-
-            &.todo-item-placeholder {
-                background: rgba(0, 0, 0, 0.12);
-                * {
-                    opacity: 0;
-                }
-            }
-
-            .handle {
-                display: none;
-                position: absolute;
-                height: 100%;
-                width: 48px;
-                top: 0;
-                left: 0;
-                cursor: move;
-                text-align: center;
-
-                md-icon {
-                    display: block;
-                    position: relative;
-                    top: 50%;
-                    transform: translateY(-50%);
-                }
-            }
-
-            .tags {
-                font-size: 12px;
-
-                .tag {
-                    border-radius: 2px;
-                    margin: 8px 4px 0 0;
-                    padding: 3px 8px;
-                    background-color: rgba(0, 0, 0, 0.08);
-
-                    .tag-color {
-                        width: 8px;
-                        height: 8px;
-                        margin-right: 8px;
-                        border-radius: 50%;
+                    .md-ripple-container {
+                        display: none;
                     }
                 }
-            }
 
-            &.completed {
-                background: #EEEEEE;
-
-                .title,
-                .notes {
-                    color: rgba(0, 0, 0, 0.54);
-                    text-decoration: line-through;
-                }
-            }
-
-            &.selected {
-                background: #FFF8E1;
-            }
-
-            .info {
-                margin: 0 16px 0 8px;
-
-                .title {
-                    font-size: 15px;
-                    font-weight: 500;
+                &.todo-item-placeholder {
+                    background: rgba(0, 0, 0, 0.12);
+                    * {
+                        opacity: 0;
+                    }
                 }
 
-                .notes {
-                    margin-top: 4px;
+                .handle {
+                    display: none;
+                    position: absolute;
+                    height: 100%;
+                    width: 48px;
+                    top: 0;
+                    left: 0;
+                    cursor: move;
+                    text-align: center;
+
+                    md-icon {
+                        display: block;
+                        position: relative;
+                        top: 50%;
+                        transform: translateY(-50%);
+                    }
                 }
-            }
 
-            .buttons {
+                .tags {
+                    font-size: 12px;
 
-                .is-starred {
-                    margin: 0 0 0 16px;
+                    .tag {
+                        border-radius: 2px;
+                        margin: 8px 4px 0 0;
+                        padding: 3px 8px;
+                        background-color: rgba(0, 0, 0, 0.08);
+
+                        .tag-color {
+                            width: 8px;
+                            height: 8px;
+                            margin-right: 8px;
+                            border-radius: 50%;
+                        }
+                    }
                 }
 
-                .is-important {
-                    margin: 0;
+                &.completed {
+                    background: #EEEEEE;
+
+                    .title,
+                    .notes {
+                        color: rgba(0, 0, 0, 0.54);
+                        text-decoration: line-through;
+                    }
+                }
+
+                &.selected {
+                    background: #FFF8E1;
+                }
+
+                .info {
+                    margin: 0 16px 0 8px;
+
+                    .title {
+                        font-size: 15px;
+                        font-weight: 500;
+                    }
+
+                    .notes {
+                        margin-top: 4px;
+                    }
+                }
+
+                .buttons {
+
+                    .is-starred {
+                        margin: 0 0 0 16px;
+                    }
+
+                    .is-important {
+                        margin: 0;
+                    }
                 }
             }
         }
@@ -132,15 +136,21 @@
 
             .sortable {
 
-                .todo-item {
-                    padding-left: 32px;
+                .todo-items {
+
+                    .todo-item {
+                        padding-left: 32px;
+                    }
                 }
             }
 
-            .todo-item {
+            .todo-items {
 
-                .handle {
-                    width: 32px;
+                .todo-item {
+
+                    .handle {
+                        width: 32px;
+                    }
                 }
             }
         }
